--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1 class="header">我是 header</h1>
+<a href="faq.html">faq</a>
 <a href="index.html">index</a>
 <a href="about.html">about</a>
 <a href="contact.html">contact</a>
